syntax = "proto3";
package arcus.pkg.service.internal.pb;

import "google/protobuf/any.proto";

option go_package = "pb";

message Context {
  // Name of the service that produced this event.
  string service_name = 1;

  // Version of the service that produced this event.
  string service_version = 2;

  // Command that initiated this context.
  google.protobuf.Any command = 3;

  // Access token of the principal user.
  string access_token = 4;

  // ID of the principal account that sent the command.
  string principal_id = 5;

  // Role of the principal account that sent the command.
  string principal_role = 6;

  string principal_type = 7;

  string principal_name = 8;

  string principal_email = 9;
}
